2010-04-05  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Trying to fix the problem detected 
	with recon and new modules from a network template.

	* lib/PandoraFMS/Core.pm: Fallback to previous version, this fix
        makes Pandora server to generate events constantly.

2010-04-05  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed the problem that agent status(estado)
	is never updated to $new_status if initial state of new agent is
	"estado != last_status" with "$new_status == last_status".
	eg) When new agents are added by recontask, estado=1 and last_status=0
	are set.

2010-04-04  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Some "fixed" descriptions and sample
	setup, I hope this help to clarify new users how to setup the MTA
	(A LOTS of problems with this in forums), and some new inline 
	documentation about some configuration tokens.

2010-03-24  Sancho Lerena <slerena@artica.es>

    * util/pandora_manage.pl: New tool to do things in Pandora (system wide)
    from the command line. This pretends to unify small maintance tips on
    Pandora, intead have a miriad of small tools. First features are to 
    enable/disable alerts globally and to disable the enterprise ACL feature.

2010-03-19  Eric Ross <eric.ross.c@gmail.com>

	* util/pandora_db.pl: Added log4x tables to purge

2010-03-10  Sancho Lerena  <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fix for annoying notices from
	Perl due reference to undefined variable (GIS).

	* lib/PandoraFMS/Core.pm: Automonitoring includes now status of 
	database maintance and warns if more than 24hrs without running 
	database maintance script.

	* util/pandora_db.pl: Added support to new purge parameters for
	event, audits, snmp traps, string data and gis data. Added new 
	section to clean orphaned information (using an application - 
	implemented database referencial integrity model).

2010-03-10  Miguel de Dios  <miguel.dedios@artica.es>
