@@ -136,6 +136,13 @@ sub exec_prediction_module ($$$$) {
 	my $agent_module = get_db_single_row ($dbh, 'SELECT * FROM tagente_modulo WHERE id_agente_modulo = ?', $id_am);
 	return unless defined $agent_module;
 
+	# Service modules
+	if ($agent_module->{'custom_integer_1'} != 0) {
+		logger ($pa_config, "Executing service module " . $agent_module->{'nombre'}, 10);
+		enterprise_hook ('exec_service_module', [$pa_config, $agent_module, $server_id, $dbh]);
+		return;
+	}
+
     # Get a full hash for target agent_module record reference ($target_module)
     my $target_module = get_db_single_row ($dbh, 'SELECT * FROM tagente_modulo WHERE id_agente_modulo = ?', $agent_module->{'prediction_module'});
 	return unless defined $target_module;
